test/arrays/diten/vectorArrayMisuse.chpl
var D = {0..1};
var A: [D] int;
var B: [D] int;

for i in 1..100 {
  A.push_back(i);
}
